<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coffee3"
    android:fillViewport="true"
    tools:context="com.example.madhavbangaru.justjava.MainActivity">


        <LinearLayout

            style="@style/linearLayout">

            <EditText
                android:id="@+id/editText"
                style="@style/TopTextView"
                android:hint="@string/name" />

            <TextView
                style="@style/ToppingsHeader"
                android:text="@string/toppings" />

            <CheckBox
                android:id="@+id/whipped_cream_checkBox"
                style="@style/whippedCream"
                android:text="@string/whipped_cream" />

            <CheckBox
                android:id="@+id/chocolate_checkBox"
                style="@style/chocolate"
                android:text="@string/chocolate" />

            <TextView
                style="@style/quantityHeader"
                android:text="@string/quantity" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/button"
                    android:onClick="decrement"
                    android:text="@string/decrement" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    style="@style/quantity"
                    android:text="@string/initial" />

                <Button
                    style="@style/button"
                    android:onClick="increment"
                    android:text="@string/increment" />
            </LinearLayout>

            <TextView
                style="@style/orderHeader"
                android:text="@string/order_summary" />

            <TextView
                android:id="@+id/order_summary_text_view"
                style="@style/price"
                android:text="@string/initialPrice" />

            <Button
                style="@style/orderButton"
                android:onClick="submitOrder"
                android:text="@string/order" />


        </LinearLayout>

</ScrollView>

